# qi-lsp

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
examples/: chinese_punctuation.qi
src/: build.rs  document_symbols.rs  lib.rs  main.rs
src/completion/: mod.rs
src/definition/: mod.rs
src/diagnostics/: mod.rs  semantic.rs
src/document/: mod.rs
src/folding/: mod.rs
src/formatting/: mod.rs
src/hover/: mod.rs
src/references/: mod.rs
src/rename/: mod.rs
src/semantic_tokens/: mod.rs
src/server/: mod.rs
src/text/: mod.rs
src/workspace_symbols/: mod.rs
