[package]
name = "qi-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Qi Language Team <team@qi-lang.org>"]
description = "Language Server Protocol implementation for Qi programming language"
license = "MIT"
repository = "https://github.com/qi-lang/qi-compiler"
homepage = "https://qi-lang.org"
rust-version = "1.75"

[[bin]]
name = "qi-lsp"
path = "src/main.rs"

[lib]
name = "qi_lsp"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
# LSP Protocol implementation
lsp-server = "0.7.6"
lsp-types = "0.97.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.107"

# Qi compiler dependencies
qi-compiler = { path = "../qi" }
qi-tools = { path = "../qi-tools" }

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Logging and configuration
log = "0.4.20"
env_logger = "0.11.8"

# Error handling
thiserror = "1.0.69"
anyhow = "1.0.86"

# Cross-platform path handling
path-absolutize = "3.1.1"

# Utilities
once_cell = "1.21.3"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
dashmap = "6.1.0"
ropey = "1.6.1"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.23.0"